updating stats folder

--- a/honors/draft/ieee template/ieee_draft.tex
+++ b/honors/draft/ieee template/ieee_draft.tex
@@ -170,7 +170,8 @@ see the next page for our data. it was originally collected in inches but was co
 
 \clearpage
 \onecolumn
-\begin{tabular}{lrrrr}
+\centering
+\begin{tabular}{l|r|r|r|r}
     \toprule
     room & width (in) & length (in) & height from floor (in) & chair height (in) \\
     \midrule
@@ -227,7 +228,10 @@ see the next page for our data. it was originally collected in inches but was co
     willard 323 & 19.410000 & 19.410000 & 29.125000 & 18.125000 \\
     willard 319 & 19.410000 & 19.410000 & 29.125000 & 18.125000 \\
     \bottomrule
-\end{tabular}    
+\end{tabular}   
+
+\vspace{1em}
+this data is availible as a csv file on the github page for this project.
 \twocolumn
 \clearpage
 
