--- a/homework/homework8/q1/q1.ipynb
+++ b/homework/homework8/q1/q1.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "b822491a",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
     "from scipy.stats import t\n",
     "\n",
     "df = pd.read_csv('dat.csv', sep=',')\n",
-    "df"
+    "df.style.format()"
    ]
   },
   {
@@ -278,6 +278,14 @@
    "source": [
     "df['intercept'] = 1\n",
     "np.array(df[['intercept', 'T']])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a551057",
+   "metadata": {},
+   "source": [
+    "the first column will fit the intercept and the second will fit the b*T term."
    ]
   },
   {
